--- a/P13HTMLDOM/index.html
+++ b/P13HTMLDOM/index.html
@@ -25,12 +25,12 @@
 <body>
 
   <!-- Add your site or application content here -->
-  <h5 id = "header5"></h5>
-  <p id = "text0">Hello world! This is HTML5 Boilerplate.</p>
-  <button id = "button0"> THIS IS BUTTON ZERO</button>
+  <p id = "text">Score</p>
+<button id="button0">ÖKA</button>
 
   <script src="js/app.js"></script>
 
 </body>
 
 </html>
+
