--- a/P13HTMLDOM/index.html
+++ b/P13HTMLDOM/index.html
@@ -25,8 +25,9 @@
 <body>
 
   <!-- Add your site or application content here -->
-  <p id = "text">Score</p>
-<button id="button0">ÖKA</button>
+  <h5 id = "header5"> </h5>
+  <p id = "text0">Hello world! This is HTML5 Boilerplate.</p>
+  <button id = "button0"> THIS IS BUTTON ZERO </button>
 
   <script src="js/app.js"></script>
 
