--- a/P13.5-HTMLDOM/index.html
+++ b/P13.5-HTMLDOM/index.html
@@ -25,9 +25,9 @@
 <body>
 
   <!-- Add your site or application content here -->
-  <p id = text0 >.</p>
-
-
+  <p id = "text0" >.</p>
+<button id = "button0" > Plus Button </button>
+<button id = "button1" onclick = decreaseScoreByOne()> Minus button </button>
   <script src="js/app.js"></script>
 
 </body>
